--- a/localisation/replace/bruh_ger_l_english.yml
+++ b/localisation/replace/bruh_ger_l_english.yml
@@ -193,6 +193,7 @@
   GER_flak_36:0 "Flak 36"
   GER_early_barb:0 "Operation Barbarossa"
   GER_strike_the_rebellion:0 "Strike the Beneluxian Rebellion"
+  GER_prepare_barb_railway:0 "Prepare for Operation Barbarossa"
 
   #### EVENTS ####
   germany.501.t:0 "Question of the Economy"
