dday + name fixes

--- a/localisation/replace/bruh_eng_l_english.yml
+++ b/localisation/replace/bruh_eng_l_english.yml
@@ -176,6 +176,7 @@
   ENG_soviet_lend_lease:0 "Aid the Bolsheviks"
   ENG_soviet_lend_lease_desc:0 "The USSR is in a bad state and we need to help them fight against Germany."
   ENG_operation_countenance:0 "Operation Countenance"
+  ENG_dday:0 "Operation Overlord"
   ENG_artic_convoys:0 "Artic Convoys"
   ENG_artic_convoys_desc:0 "The USSR can be supplied with arctic convoys."
   ENG_special_air_service:0 "Expand the SAS"
@@ -197,6 +198,7 @@
   ENG_air_defenses:0 "Mainland Air Defenses"
   ENG_fortify_the_coast:0 "Fortify the Coast" 
   ENG_british_invasion_of_iran:0 "Operation Countenance"
+  ENG_dday:0 "Operation Overlord"
   ENG_khartoum_airfield:0 "Build Up the Khartoum Airfield"
   ENG_dockyard_expansion:0 "Begin Wartime Dockyard Construction"
   ENG_dockyard_expansion2:0 "Finish Wartime Dockyard Construction"
@@ -282,6 +284,7 @@
   ENG_modify_economy_british:0 "British Economy"
   ENG_modify_economy_shadow_scheme:0 "The Shadow Scheme"
   ENG_modify_economy_war:0 "British War Economy"
+  ENG_dday_entrenchment:0 "Operation Overlord Preparations"
   ENG_shadow_scheme_2_tt:0 "£factory_bombing_defence_texticon  Factory Bomb Vulnerability: §G-10.00%§!\n£repair_civ_factory_texticon  Factory Repair Speed: §G+10.00%§!"
   ENG_defend_gibraltar_tt:0 "§YGibraltar§!: RSpawn! §Y12x 30 Width Mountaineers Division§! in RGibraltar!\n\n"	
 
@@ -369,6 +372,7 @@
   Royal_Commandos_increase_tt:0 "Increase template cap of §YRoyal Commandos§! by §G+1§!."
   Royal_Commandos_increase_double_tt:0 "Increase template cap of §YRoyal Commandos§! by §G+2§!."
   ENG_iran_spawn_in_tt:0 "Mobilizes §R10 Units§! of §R20 Width Colonial Infantry§! in §GBaluchistan§!\n"
+  ENG_dday_spawn_in_tt:0 "Mobilizes §R12 30 Width Marines Veterans§! in §GLondon§!\n"
   SOV_iran_spawn_in_tt:0 "Mobilizes §R10 20 Width Units§! of the §R1st Iranian Front§! in §GAzerbaijan§!\n"
   OPERATION_TORCH_ONGING:0 "Operation Torch Ongoing"
   uk_into_uk_w_ireland_tt:0 "§YThe United Kingdom of Great Britain and Northern Ireland will be known as The United Kingdom of Great Britain and Ireland§!"
