--- a/localisation/replace/bruh_can_l_english.yml
+++ b/localisation/replace/bruh_can_l_english.yml
@@ -17,6 +17,7 @@
   CAN_the_kangaroo_desc:0 "The Kangaroo was the very successful variant from the failed Ram tank project."
   CAN_the_sexton:0 "The Sexton"
   CAN_the_sexton_desc:0 "During the war, Canada produced thousands of the Sexton SPG to be lend-leased to allies in the United Nations."
+  CAN_adrian_slave:0 "The Anglo-Canadian Trade Treaty"
 
   ### IDEAS ###
   CAN_bits_and_pieces_program_1:0 "Bits and Pieces Program Improvements"
@@ -25,6 +26,7 @@
   CAN_sexton:0 "The Sexton"
   CAN_license_american_equipment:0 "American Production Licenses"
   home_of_the_free_can:0 "Home of the Free"
+  CAN_adrian:0 "The Anglo-Canadian Trade Treaty"
 
   ### DYNAMIC MODIFIERS ###
   CAN_economy_dynamic_modifier:0 "[CAN_economy_dynam_mod_sl]"
