--- a/localisation/replace/bruh_sov_l_english.yml
+++ b/localisation/replace/bruh_sov_l_english.yml
@@ -248,6 +248,7 @@
   #### IDEAS ####
   #mikhail_tukhachevsky_1:0 "Mikhail Tukhachevsky"
   #purge_1_group_c:0 "Purged by Stalin"
+  SOV_air_nerf_dynamic_modifier_kreso:0 "Red Air Force Purged"
   SOV_bad_rail:0 "Ruined Railway Network"
   SOV_bad_radio:0 "Lack of Innovation"
   SOV_2_5_plan:0 "The Second Five Year Plan"
